--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<form>
+	<form method="POST">
 		<p>
-			<label for="">Nombre:</label>
-			<input type="text" name="first_name" required/>
+			<label for="first_name">Nombre:</label>
+			<input type="text" name="first_name" id="first_name" required/>
 		</p>
 
 		<p>
-			<label for="">Apellidos:</label>
-			<input type="text" name="last_name" required/>
+			<label for="last_name">Apellidos:</label>
+			<input type="text" name="last_name" id="last_name" required/>
 		</p>
 
 		<p>
 			<label for="">Sexo:</label>
-			<input type="radio" name="gender" /> Femenino
-			<input type="radio" name="gender" /> Masculino
+			<input type="radio" name="gender" value="f" id="femenino"/>
+			<label for="femenino">Femenino</label>
+			<input type="radio" name="gender" value="m" id="masculino"/>
+			<label for="masculino">Masculino</label>
 		</p>
 
 		<p>
 			<label for="">Intereses:</label>
-			<input type="checkbox" name="interest" /> Tecnología
-			<input type="checkbox" name="interest" /> Deportes
-			<input type="checkbox" name="interest" /> Desarrollo
+			<input type="checkbox" name="interest" value="tec" id="tec"/>
+			<label for="tec">Tecnología</label>
+			<input type="checkbox" name="interest" value="sport" id="sport"/>
+			<label for="sport">Deportes</label>
+			<input type="checkbox" name="interest" value="dev" id="dev"/>
+			<label for="dev">Desarrollo</label>
 		</p>
 
 		<input type="submit" value="Registrar"/>
