--- a/public/index.html
+++ b/public/index.html
@@ -8,35 +8,37 @@
       integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
       crossorigin="anonymous">
     </script>
+    <link rel="stylesheet" type="text/css" href="main.css">
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-	<form method="POST">
+	<form method="GET">
 		<p>
 			<label for="first_name">Nombre:</label>
-			<input type="text" name="first_name" id="first_name" required/>
+			<input type="text" name="first_name" id="first_name" required class="input-text"/>
 		</p>
 
 		<p>
 			<label for="last_name">Apellidos:</label>
-			<input type="text" name="last_name" id="last_name" required/>
+			<input type="text" name="last_name" id="last_name" required class="input-text"/>
 		</p>
 
 		<p>
 			<label for="">Sexo:</label>
-			<input type="radio" name="gender" value="f" id="femenino"/>
+			<input type="radio" name="gender" value="f" id="femenino" id="sexo-text"/>
 			<label for="femenino">Femenino</label>
 			<input type="radio" name="gender" value="m" id="masculino"/>
 			<label for="masculino">Masculino</label>
 		</p>
 
 		<p>
+			<input type="checkbox" name="interest" value="intereses" id="interest-text" />
 			<label for="">Intereses:</label>
-			<input type="checkbox" name="interest" value="tec" id="tec"/>
+			<input type="checkbox" name="interest" value="tecnologia" id="tec"/>
 			<label for="tec">Tecnología</label>
-			<input type="checkbox" name="interest" value="sport" id="sport"/>
+			<input type="checkbox" name="interest" value="deportes" id="sport"/>
 			<label for="sport">Deportes</label>
-			<input type="checkbox" name="interest" value="dev" id="dev"/>
+			<input type="checkbox" name="interest" value="desarrollo" id="dev"/>
 			<label for="dev">Desarrollo</label>
 		</p>
 
